--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,7 +4,7 @@
             "path": "force-app",
             "package": "relatedImages",
             "versionName": "ver 0.1",
-            "versionNumber": "0.3.0.NEXT",
+            "versionNumber": "0.4.0.NEXT",
             "default": false
         },
         {
@@ -18,6 +18,7 @@
     "packageAliases": {
         "relatedImages": "0Ho3u0000008OKkCAM",
         "relatedImages@0.2.0-1": "04t3u000002qbg1AAA",
-        "relatedImages@0.3.0-1": "04t3u000002qbg6AAA"
+        "relatedImages@0.3.0-1": "04t3u000002qbg6AAA",
+        "relatedImages@0.4.0-1": "04t3u000002qbgBAAQ"
     }
 }
