--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,7 +4,7 @@
             "path": "force-app",
             "package": "relatedImages",
             "versionName": "ver 0.1",
-            "versionNumber": "0.4.0.NEXT",
+            "versionNumber": "0.6.0.NEXT",
             "default": false
         },
         {
@@ -19,6 +19,8 @@
         "relatedImages": "0Ho3u0000008OKkCAM",
         "relatedImages@0.2.0-1": "04t3u000002qbg1AAA",
         "relatedImages@0.3.0-1": "04t3u000002qbg6AAA",
-        "relatedImages@0.4.0-1": "04t3u000002qbgBAAQ"
+        "relatedImages@0.4.0-1": "04t3u000002qbgBAAQ",
+        "relatedImages@0.5.0-1": "04t3u000002qbhYAAQ",
+        "relatedImages@0.6.0-1": "04t3u000002qbhdAAA"
     }
 }
