--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,7 +4,7 @@
             "path": "force-app",
             "package": "relatedImages",
             "versionName": "ver 0.1",
-            "versionNumber": "0.8.0.NEXT",
+            "versionNumber": "0.9.0.NEXT",
             "default": false
         },
         {
@@ -23,6 +23,7 @@
         "relatedImages@0.5.0-1": "04t3u000002qbhYAAQ",
         "relatedImages@0.6.0-1": "04t3u000002qbhdAAA",
         "relatedImages@0.7.0-1": "04t3u000002qbvxAAA",
-        "relatedImages@0.8.0-1": "04t3u000002qbxtAAA"
+        "relatedImages@0.8.0-1": "04t3u000002qbxtAAA",
+        "relatedImages@0.9.0-1": "04t3u000002qbxyAAA"
     }
 }
