overide slds styling for filecard zoom

--- a/force-app/main/default/lwc/jsconfig.json
+++ b/force-app/main/default/lwc/jsconfig.json
@@ -11,6 +11,9 @@
             ],
             "c/relatedImages": [
                 "relatedImages/relatedImages.js"
+            ],
+            "c/localPreviewer": [
+                "../../../../implementation/main/default/lwc/localPreviewer/localPreviewer.js"
             ]
         }
     },
